--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@ title: Du Hoang
         </div>
       </a>
 
-      <a href="https://createastory.site" class="block" target="_blank">
+      <a href="https://www.youtube.com/watch?v=D44TfltYwP8" class="block" target="_blank">
         <div class="block-img" style="background-image:url(./img/ai-bunny.png)"></div>
         <div class="block-info">
           My experiment in creating an AI children's illustration book generator using ChatGPT and Stable Diffusion.
         </div>
       </a>
 
-      <a href="https://travelmate-sooty.vercel.app" class="block" target="_blank">
+      <a href="https://histoury.vercel.app/" class="block" target="_blank">
         <div class="block-img" style="background-image:url(./img/travel-mate.png)"></div>
         <div class="block-info">
           An exploration of AI as a travel companion app, letting users interact with famous people as their local guide.
