--- a/index.html
+++ b/index.html
@@ -32,31 +32,23 @@ title: Du Hoang
 
       <div class="sidebar">
 
-      <div class="sub-heading">Side Projects</div>
-      <a href="https://aisketch.vercel.app" class="block" target="_blank">
-        <div class="block-img" style="background-image:url(./img/ais-logo.png)"></div>
+      <div class="sub-heading">AI Applications</div>
+      <a href="https://apps.apple.com/us/app/3d-sketchbook/id6751770186" class="block" target="_blank">
+        <div class="block-img" style="background-image:url(./img/AppIcon-3DS.png)"></div>
         <div class="block-info">
-          AI sketchbook for concept artists that mimics the user experience and feel of real sketch books and artist tools. </div>
+          3D Sketchbook is an iPad app that lets user draw sketches then transform them into 3D models. </div>
+      </a>
+
+      <a href="https://apps.apple.com/us/app/aisketch/id6748599847" class="block" target="_blank">
+        <div class="block-img" style="background-image:url(./img/AppIcon-AIS.png)"></div>
+        <div class="block-info">
+          AI Sketchbook for iOS brings the experience and feel of a real sketch book to AI image gen. </div>
       </a>
 
       <a href="https://stablenetfusion.com" class="block" target="_blank">
         <div class="block-img" style="background-image:url(./img/snf-screen.png)"></div>
         <div class="block-info">
-          A powerful, and easy-to-use, AI image-gen editor, created using Stable Diffusion and ControlNets via Hugging Face API.
-        </div>
-      </a>
-
-      <a href="https://www.youtube.com/watch?v=D44TfltYwP8" class="block" target="_blank">
-        <div class="block-img" style="background-image:url(./img/ai-bunny.png)"></div>
-        <div class="block-info">
-          My experiment in creating an AI children's illustration book generator using ChatGPT and Stable Diffusion.
-        </div>
-      </a>
-
-      <a href="https://www.youtube.com/watch?v=gyVKPJQJrcc" class="block" target="_blank">
-        <div class="block-img" style="background-image:url(./img/histoury-img.png)"></div>
-        <div class="block-info">
-          An exploration of AI as a travel companion app, letting users interact with famous people as their local guide.
+          A powerful, and easy-to-use, AI image-gen editor, created using Stable Diffusion and ControlNets.
         </div>
       </a>
 
