--- a/unity-2.html
+++ b/unity-2.html
@@ -40,7 +40,7 @@ title: Du Hoang
             </div>
                         
         </div>
-        <div class="grid triple-rand" style="grid-template-columns: 0.412fr 0.32fr 0.28fr; margin-bottom: 8px; display: none;">
+        <div class="grid triple-rand" style="grid-template-columns: 0.412fr 0.32fr 0.28fr; margin-bottom: 8px;">
 
                 <div class="cell">
                     <img src="img/meta-browser.png" />
